--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
   </head>
@@ -24,37 +23,15 @@
         <div class="frame10">
           <span class="frame5">
             <span class="border">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M15.9688 12.0938L15.25 15.25C15.1042 15.7292 14.7812 15.9792 14.2812 16C11.6354 15.9792 9.23958 15.3229 7.09375 14.0312C4.94792 12.7604 3.23958 11.0521 1.96875 8.90625C0.677083 6.76042 0.0208333 4.36458 0 1.71875C0.0208333 1.21875 0.270833 0.895833 0.75 0.75L3.90625 0.03125C4.40625 -0.052084 4.78125 0.135417 5.03125 0.59375L6.46875 3.96875C6.63542 4.42708 6.54167 4.8125 6.1875 5.125L4.53125 6.46875C5.05208 7.55208 5.73958 8.52083 6.59375 9.375C7.44792 10.2292 8.41667 10.9271 9.5 11.4688L10.875 9.78125C11.1875 9.42708 11.5729 9.33333 12.0312 9.5L15.4062 10.9375C15.8438 11.2083 16.0312 11.5938 15.9688 12.0938Z"
-                  fill="white"
-                />
-              </svg>
+              <img src="assets/Vector (2).png" alt="" />
             </span>
             <span>Phone: +163-654-3569</span>
           </span>
           <span class="frame5">
             <span class="border">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M8 11C7.47917 11 6.98958 10.8333 6.53125 10.5L0 5.40625V12.5C0.0208333 12.9167 0.166667 13.2708 0.4375 13.5625C0.729167 13.8333 1.08333 13.9792 1.5 14H14.5C14.9167 13.9792 15.2708 13.8333 15.5625 13.5625C15.8333 13.2708 15.9792 12.9167 16 12.5V5.40625L9.46875 10.5C9.01042 10.8333 8.52083 11 8 11ZM0.5 4.53125L7.125 9.6875C7.39583 9.89583 7.6875 10 8 10C8.3125 10 8.60417 9.89583 8.875 9.6875L15.5 4.53125C15.8125 4.26042 15.9792 3.91667 16 3.5C15.9792 3.08333 15.8333 2.72917 15.5625 2.4375C15.2708 2.16667 14.9167 2.02083 14.5 2H1.5C1.08333 2.02083 0.729167 2.16667 0.4375 2.4375C0.166667 2.72917 0.0208333 3.08333 0 3.5C0 3.91667 0.166667 4.26042 0.5 4.53125Z"
-                  fill="white"
-                />
-              </svg>
+              <img src="assets/Vector (1).png" alt="" />
             </span>
-            <span>Phone: +163-654-3569</span>
+            <span>Email: Westbaysurgerycentre@info.com</span>
           </span>
         </div>
         <div class="frame9">
@@ -188,8 +165,8 @@
             ></button>
             </div> -->
       <!-- Slides -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+      <div class="carousel-inner frame19-inner">
+        <div class="carousel-item frame19-item active">
           <div class="carousel1">
             <img src="assets/carousel.jpg" alt="..." />
           </div>
@@ -216,15 +193,9 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item frame19-item">
           <div class="carousel1 ">
-            <img
-              src="assets/carousel.jpg"
-              class="d-block w-100 img-fluid
-                     img-fluid
-                     img-fluid"
-              alt="..."
-            />
+            <img src="assets/carousel.jpg" alt="..." />
           </div>
           <div class="banner-content carousel-overlay container-fluid">
             <p id="trusted">TRUSTED BY 100000+ PATIENTS</p>
@@ -249,15 +220,9 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item frame19-item">
           <div class="carousel1 ">
-            <img
-              src="assets/carousel.jpg"
-              class="d-block w-100 img-fluid
-                     img-fluid
-                     img-fluid"
-              alt="..."
-            />
+            <img src="assets/carousel.jpg" alt="..." />
           </div>
           <div class="banner-content carousel-overlay container-fluid">
             <p id="trusted">TRUSTED BY 100000+ PATIENTS</p>
@@ -334,7 +299,7 @@
         <div class="row align-items-center">
           <!-- Left Image Column -->
 
-          <div class="col-lg-6 polycontainer  mb-4 mb-lg-0">
+          <div class="col-lg-6 polycontainer mb-lg-0">
             <div class="frame23 position-relative">
               <img src="assets/Frame 23.png" alt="" />
             </div>
@@ -342,7 +307,7 @@
 
           <!-- Right Text Column -->
           <div class="col-lg-6 frame25">
-            <span class="badge bg-primary text-white ">ABOUT US</span>
+            <span class="badge about-us bg-primary text-white ">ABOUT US</span>
             <h2>
               Why Choose <br />
               West Bay Surgery Center?
@@ -371,19 +336,17 @@
       </div>
     </section>
 
-    <section class="container-fluid mt-4">
+    <section class="frame29-container container-fluid pt-4">
       <div class="container">
-        <div class="row frame29 mt-3 gutter-48">
+        <div class="row frame29 ">
           <!-- Left Column -->
-          <div
-            class="our-services col-lg-4 col-12 text-center text-md-start"
-          >
+          <div class="our-services col-lg-5 col-12 text-center text-md-start">
             <button id="our-services-btn">OUR SERVICES</button>
             <h1>Our Specialties & Procedures</h1>
           </div>
           <!-- Middle Column -->
           <div
-            class="col-lg-4 col-12 d-flex justify-content-center justify-content-lg-center"
+            class="col-lg-5 col-12 d-flex justify-content-center justify-content-lg-center"
           >
             <p class="text-center text-lg-start">
               We provide a wide range of outpatient surgical procedures across
@@ -393,7 +356,7 @@
           </div>
           <!-- Right Column -->
           <div
-            class="col-lg-4 col-md-12 col-12 text-center text-lg-end view-btn"
+            class="col-lg-2 col-md-12 col-12 text-center text-lg-end view-btn"
           >
             <button class="blueButton">
               <div class="button-overlay"></div>
@@ -403,7 +366,7 @@
         </div>
         <div class=" cards row gy-5 mb-5">
           <div class="  card-col col-12 col-lg-4">
-            <div class="card p-4">
+            <div class="card p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card1 (2).jpg"
@@ -425,8 +388,8 @@
               </div>
             </div>
           </div>
-          <div class= " card-col col-12 col-lg-4">
-            <div class="card p-4">
+          <div class=" card-col col-12 col-lg-4">
+            <div class="card p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card2 (2).jpg"
@@ -448,8 +411,8 @@
               </div>
             </div>
           </div>
-          <div class= " card-col col-12 col-lg-4">
-            <div class="card p-4">
+          <div class=" card-col col-12 col-lg-4">
+            <div class="card p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card3 (2).jpg"
@@ -473,8 +436,8 @@
           </div>
         </div>
         <div class="row gy-5 mb-5">
-          <div class= " card-col col-12 col-lg-4">
-            <div class="card card-col p-4">
+          <div class=" card-col col-12 col-lg-4">
+            <div class="card card-col p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card4 (2).jpg"
@@ -496,8 +459,8 @@
               </div>
             </div>
           </div>
-          <div class= " card-col col-12 col-lg-4">
-            <div class="card card-col p-4">
+          <div class=" card-col col-12 col-lg-4">
+            <div class="card card-col p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card5.jpg"
@@ -507,7 +470,10 @@
                 <p>Dr. Jordan Dufren</p>
               </div>
               <div class="card-body pt-3">
-                <h5 class="card-title">Pain Medicine & Pain <br> Management</h5>
+                <h5 class="card-title">
+                  Pain Medicine & Pain <br />
+                  Management
+                </h5>
                 <p class="card-text">
                   Personalized solutions to help manage and relieve chronic or
                   post-operative pain.
@@ -519,8 +485,8 @@
               </div>
             </div>
           </div>
-          <div class= " card-col col-12 col-lg-4">
-            <div class="card p-4">
+          <div class=" card-col col-12 col-lg-4">
+            <div class="card p-3">
               <div id="cardImg">
                 <img
                   src="assets/cardImg/card6.jpg"
@@ -552,8 +518,8 @@
       <div class="container test-form">
         <!-- Row 1: 4 columns -->
         <div class="banner2Img text-center text-lg-start row ">
-          <div class="col-3 col-lg-3">
-            <div class="p-3">
+          <div class="col-6 col-lg-3">
+            <div>
               <div class="banner2 ">
                 <h1>45k</h1>
                 <span>+</span>
@@ -562,7 +528,7 @@
             </div>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="p-3">
+            <div id="lastText2">
               <div class="banner2 ">
                 <h1>306</h1>
                 <span>+</span>
@@ -571,16 +537,16 @@
             </div>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="p-3 ">
+            <div id="lastText2">
               <div class="banner2 ">
-                <h1>10k<h1>
+                <h1>10k</h1>
                 <span>+</span>
               </div>
               <p>Operations Successful</p>
             </div>
           </div>
           <div class="col-6 col-lg-3">
-            <div class="p-3 ">
+            <div id="lastText">
               <div class="banner2 ">
                 <h1>320</h1>
                 <span>+</span>
@@ -592,7 +558,7 @@
         <!-- Row 2: Carousel + Form -->
         <div class="row g-4 ">
           <!-- Testimonials Carousel -->
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-8 col-12">
             <div
               class="card testimonial-card shadow-lg border-0 h-100 rounded-4 p-4 text-center"
             >
@@ -810,7 +776,7 @@
                 <!-- Controls -->
                 <div class="d-flex btn-cont justify-content-center mt-3">
                   <button
-                    class="btn rounded-circle"
+                    class="btn2 rounded-circle"
                     type="button"
                     data-bs-target="#testimonialCarousel"
                     data-bs-slide="prev"
@@ -818,7 +784,7 @@
                     <i class="bi bi-arrow-left"></i>
                   </button>
                   <button
-                    class="btn rounded-circle"
+                    class="btn2 rounded-circle"
                     type="button"
                     data-bs-target="#testimonialCarousel"
                     data-bs-slide="next"
@@ -831,7 +797,7 @@
           </div>
 
           <!-- Appointment Form -->
-          <div class="formDiv col-lg-6 col-12">
+          <div class="formDiv col-lg-4 col-12">
             <div class="card frame41 shadow-lg border-0 h-100 rounded-4 p-4">
               <h3 class="fw-bold text-center mb-4">Make An Appointment</h3>
               <form>
@@ -877,13 +843,14 @@
 
     <section class="doctors-slider container">
       <!-- Section Heading -->
-      <div class="text-center specialist-header mb-4">
+      <div class="text-center specialist-header">
         <span class="badge">OUR SPECIALIST</span>
         <h2 class="meet-our mt-3">Meet Our Specialists</h2>
         <p>
-          Our team of dedicated and highly skilled doctors is at the heart of
-          our commitment to providing exceptional medical care. Each member of
-          our team brings a wealth of knowledge, experience.
+          our team of dedicated and highly skilled doctors is at the heart of
+          our <br />
+          commitment to providing exceptional medical care. Each member of our
+          team brings a wealth of knowledge, experience.
         </p>
       </div>
 
@@ -1092,19 +1059,17 @@
       </div>
     </section>
 
-    <section class="accordion mt-6 py-5">
+    <section class="accordion">
       <div class="container d-flex justify-content-center">
         <div class="row ">
           <div class="col-12 accrd-wrapper">
             <div class="w-100 accrd">
               <!-- FAQ Badge -->
               <div id="faq" class="text-center badge  mb-3">
-                <span >FAQ</span>
+                <span>FAQ</span>
               </div>
 
-              <h2 class="text-center meet-our">
-                Frequently Asked Questions
-              </h2>
+              <h2 class="text-center meet-our">Frequently Asked Questions</h2>
 
               <!-- Accordion -->
               <div class="accordion" id="faqAccordion">
@@ -1153,9 +1118,6 @@
                       May my family accompany me?
                       <span height="16px" width="16px" class="icon"></span>
                     </button>
-
-                    
-
                   </h2>
                   <div
                     id="collapseTwo"
@@ -1185,8 +1147,6 @@
                       What happens behind the scenes of my procedure?
                       <span height="16px" width="16px" class="icon"></span>
                     </button>
-
-
                   </h2>
                   <div
                     id="collapseThree"
@@ -1216,7 +1176,6 @@
                       surgery?
 
                       <span height="16px" width="16px" class="icon"></span>
-
                     </button>
                   </h2>
                   <div
@@ -1247,7 +1206,6 @@
                       procedure?
 
                       <span height="16px" width="16px" class="icon"></span>
-
                     </button>
                   </h2>
                   <div
@@ -1272,12 +1230,13 @@
     <footer class="footer container-fluid text-white pt-5">
       <div class="container">
         <div class="row text-start">
-          <div class="logo-bottom col-lg-4 mb-4">
+          <div class="logo-bottom col-lg-5 mb-4">
             <div class="footer-logo d-flex mb-3">
               <img src="assets/logo2.png" alt="" />
             </div>
             <h3 class="text-start">
-              Join Our Newsletter to Keep Up to Date with Us!
+              Join Our Newsletter to Keep Up to Date <br />
+              with Us!
             </h3>
             <form class="d-flex newsletter-formneeds-validation" novalidate>
               <div id="inp-btn">
@@ -1311,10 +1270,10 @@
               </div>
             </form>
           </div>
-
+          <!-- <div class="col-lg-2"></div> -->
           <!-- Links Columns -->
-          <div class="col-lg-2 links col-md-3 col-6 mb-4">
-            <ul class="list-unstyled">
+          <div class="col-lg links col-md-3 col-6 mb-4">
+            <ul class="list-unstyled footer-ul">
               <li>
                 <h6 class="fw-bold">Information</h6>
               </li>
@@ -1340,8 +1299,8 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-2 links col-md-3 col-6 mb-4">
-            <ul class="list-unstyled">
+          <div class="col-lg links col-md-3 col-6 mb-4">
+            <ul class="list-unstyled footer-ul">
               <li><h6 class="fw-bold">Company</h6></li>
               <li>
                 <a href="#" class="text-white text-decoration-none">About Us</a>
@@ -1361,8 +1320,8 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-2 links col-md-3 col-6 mb-4">
-            <ul class="list-unstyled">
+          <div class="col-lg links col-md-3 col-6 mb-4">
+            <ul class="list-unstyled footer-ul">
               <li><h6 class="fw-bold">Help Center</h6></li>
               <li>
                 <a href="#" class="text-white text-decoration-none">FAQs</a>
@@ -1382,8 +1341,8 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-2 links col-md-3 col-6 mb-4">
-            <ul class="list-unstyled">
+          <div class="col-lg links col-md-3 col-6 mb-4">
+            <ul class="list-unstyled footer-ul">
               <li>
                 <h6 class="fw-bold">Resources</h6>
               </li>
@@ -1414,11 +1373,11 @@
         <div
           class="d-flex flex-column flex-md-row justify-content-between align-items-center"
         >
-          <div class="mb-2 mb-md-0">
-            <a href="#" class="text-white text-decoration-none me-3"
+          <div class="mb-2  privacy-p d-flex mb-md-0">
+            <a href="#" class="text-white text-decoration-none "
               >Privacy Policy</a
             >
-            <a href="#" class="text-white text-decoration-none me-3"
+            <a href="#" class="text-white text-decoration-none "
               >Terms & Condition</a
             >
             <a href="#" class="text-white text-decoration-none">Cookies</a>
